// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LandingBox Text should display "Click Start Recording to start" when isValidTab is true 1`] = `
<div
  id="landing-box"
>
  <CypressCone />
  <p
    className="text"
  >
    Click 'Start Recording' to start recording!
  </p>
</div>
`;

exports[`LandingBox Text should display "This is not a valid page for recording" when isValidTab is false 1`] = `
<div
  id="landing-box"
>
  <CypressCone />
  <p
    className="text"
  >
    This is not a valid page for recording.
  </p>
</div>
`;
